# Similateur-de-circuit

./: LICENCE  README.md
Cahier de charge/: arborescence_des_fichiers.txt  objectif.txt
Portes_logiques_classe/: AND.h  AndFront.cpp  AndFront.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitFront.cpp  CircuitFront.h  Fil.cpp  Fil.h  JumperXY.cpp  JumperXY.h  MainWindow.cpp  MainWindow.h  NAND.cpp  NAND.h  NOR.cpp  NOR.h  NOT.h  NandFront.cpp  NandFront.h  NotFront.cpp  NotFront.h  OR.h  OrFront.cpp  OrFront.h  POWER.h  Portes.cpp  Portes.h  PortesFront.cpp  PortesFront.h  S_AND.cpp  S_NOT.cpp  S_OR.cpp  TestPortes  TestPortes.cpp  Wire.h  XAND.cpp  XAND.h  XNAND.cpp  (+21 more)
Portes_logiques_classe/essai/: JumperXY.cpp  JumperXY.h  LearnFile.cpp  Learn_QTimer.cpp  QtLearn.cpp  QtLearn2.cpp  appel_fonction  appel_fonction.cpp  dragable.cpp  essai.cpp  essaiBox.cpp  learnQt3.cpp  learnqt.cpp
Portes_logiques_classe/temp/: CircuitFront.cpp  CircuitFront.h  JumperXY.cpp  JumperXY.h  MainWindow.cpp  MainWindow.h  Wire.cpp  essai_jumperxy.cpp  jump_tmp.cpp
WinMainSoft/: CMakeLists.txt  main.cpp  mainwinsoft.cpp  mainwinsoft.h  mainwinsoft.ui
build-WinMainSoft-Desktop-Debug/: CMakeCache.txt  Makefile  WinMainSoft  cmake_install.cmake  qtcsettings.cmake
build-WinMainSoft-Desktop-Debug/WinMainSoft_autogen/: mocs_compilation.cpp
build-WinMainSoft-Desktop-Debug/WinMainSoft_autogen/EWIEGA46WW/: moc_mainwinsoft.cpp  moc_mainwinsoft.cpp.d
build-WinMainSoft-Desktop-Debug/WinMainSoft_autogen/include/: ui_mainwinsoft.h
(+7 files in other folders)
